--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
 <body>
     <div id="game">
-        <section class="grid"></section>
+        <section class="grid">
+            <div class="card">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
     </div>
 </body>
 
