--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     <div class="optButton" id="scoreBox">Score:
         <div class="scoreCount" id="score"></div>
     </div>
+<img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
     <div id="game">
         <section class="grid">
             <div class="card">
-                <div class="front"></div>
+                <!-- <div class="front"></div> -->
                 <div class="back"></div>
             </div>
         </section>
