trying turn djk off on click

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <button onclick="enableMute()" id="mute" type="button">Buzzer Sound Off</button>
     <button onclick="disableMute()" id="unmute" type="button">Buzzer Sound On</button>
-
+    <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
+    <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button>
 
     <audio id="audio1" src="./audio/success.wav"></audio>
     <audio id="audio2" src="./audio/buzzer.mp3"></audio>
@@ -27,7 +28,7 @@
     <div class="optButton" id="scoreBox">Score:
         <div class="scoreCount" id="score"></div>
     </div>
-<img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
+    <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
     <div id="game">
         <section class="grid">
             <div class="card">
