added buttons and rounds

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <audio id="audio2" src="./audio/buzzer.mp3"></audio>
     <audio id="iGotKeys" src="./audio/IGotKeys3.mp3"></audio>
 
+    <div class="optButton" id="start">Round 1<br /> </div>
+
+    <div class="optButton" id="round2">Round 2<br /> <i class="far fa-play-circle"></i> </div>
+
+    <div class="optButton" id="restart">Play Again<br /> <i class="far fa-play-circle"></i> </div>
+
 
     <div class="optButton" id="lifeCountID">Keys:
         <div class="lifeCount" id="lives"></div>
@@ -29,14 +35,29 @@
         <div class="scoreCount" id="score"></div>
     </div>
     <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
-    <div id="game">
-        <section class="grid">
-            <div class="card">
-                <!-- <div class="front"></div> -->
-                <div class="back"></div>
-            </div>
-        </section>
-    </div>
+
+    <div class="level1">
+        <video source src="./djkVids/iGotKeysVid.mp4" id='video1'>
+        </video>
+        <div id="game">
+            <section class="grid">
+                <div class="card">
+                    <!-- <div class="front"></div> -->
+                    <div class="back"></div>
+                </div>
+                <div class="level2">
+                    <video source src="./djkVids/iGotKeysVid.mp4" id='video1'>
+                    </video>
+                    <div id="game">
+                        <section class="grid">
+                            <div class="card">
+                                <!-- <div class="front"></div> -->
+                                <div class="back"></div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+
 </body>
 
 
