--- a/level2.html
+++ b/level2.html
@@ -8,8 +8,8 @@
 
     <title>DJ Khaled Memory Game</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./level2.html">
-
+    <link rel="stylesheet" href="/index.html">
+    <link rel="stylesheet" href="./level3.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -18,14 +18,15 @@
     <button onclick="disableMute()" id="unmute" type="button">Buzzer Sound On</button>
     <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
     <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button>
-    <a href="./level2.html">Level2</a>
+    <a href="./level3.html">Level3</a>
+
     <audio id="audio1" src="./audio/success.wav"></audio>
     <audio id="audio2" src="./audio/buzzer.mp3"></audio>
     <audio id="iGotKeys" src="./audio/IGotKeys3.mp3"></audio>
 
-    <div class="optButton" id="start">Round 1<br /> </div>
+    <div class="optButton" id="start">Round 2<br /> </div>
 
-    <div class="optButton" id="nextRound">Round 2<br /> <i class="far fa-play-circle"></i> </div>
+    <div class="optButton" id="nextRound">Round 3<br /> <i class="far fa-play-circle"></i> </div>
 
     <div class="optButton" id="restart">Play Again<br /> <i class="far fa-play-circle"></i> </div>
 
@@ -47,23 +48,11 @@
                     <!-- <div class="front"></div> -->
                     <div class="back"></div>
                 </div>
-                <div class="level2">
-                    <video source src="./djkVids/iGotKeysVid.mp4" id='video1'>
-                    </video>
-                    <div id="game">
-                        <section class="grid">
-                            <div class="card">
-                                <!-- <div class="front"></div> -->
-                                <div class="back"></div>
-                            </div>
-                        </section>
-                    </div>
-                </div>
-
+               
 </body>
 
 
-<script src="./level1.js"></script>
+<script src="./level2.js"></script>
 
 </body>
 
