--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>DJ Khaled Memory Game</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./level2.html">
+    <link rel="stylesheet" href="./pages/level2.html">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -18,7 +18,7 @@
     <button onclick="disableMute()" id="unmute" type="button">Buzzer Sound On</button>
     <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
     <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button>
-    <a href="./level2.html">Level2</a>
+    <a href="./pages/level2.html">Level2</a>
     <audio id="audio1" src="./audio/success.wav"></audio>
     <audio id="audio2" src="./audio/buzzer.mp3"></audio>
     <audio id="iGotKeys" src="./audio/IGotKeys3.mp3"></audio>
@@ -63,7 +63,7 @@
 </body>
 
 
-<script src="./level1.js"></script>
+<script src="./js/level1.js"></script>
 
 </body>
 
