--- a/pages/level2.html
+++ b/pages/level2.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>DJ Khaled Memory Game</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="/index.html">
     <link rel="stylesheet" href="./level3.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -52,7 +52,7 @@
 </body>
 
 
-<script src="./level2.js"></script>
+<script src="../js/level2.js"></script>
 
 </body>
 
