--- a/pages/level3.html
+++ b/pages/level3.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>DJ Khaled Memory Game</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="/index.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -52,7 +52,7 @@
 </body>
 
 
-<script src="./level3.js"></script>
+<script src="../js/level3.js"></script>
 
 </body>
 
