--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <audio id="iGotKeys" src="./audio/IGotKeys3.mp3"></audio>
 
     <div class="optButton" id="start">Round 1<br /> </div>
-
+<a href="./pages/level2.html">
     <div class="optButton" id="nextRound">Round 2<br /> <i class="far fa-play-circle"></i> </div>
-
+</a>
     <div class="optButton" id="restart">Play Again<br /> <i class="far fa-play-circle"></i> </div>
 
 
