--- a/pages/level2.html
+++ b/pages/level2.html
@@ -20,14 +20,14 @@
     <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button>
     <a href="./level3.html">Level3</a>
 
-    <audio id="audio1" src="./audio/success.wav"></audio>
-    <audio id="audio2" src="./audio/buzzer.mp3"></audio>
-    <audio id="iGotKeys" src="./audio/IGotKeys3.mp3"></audio>
+    <audio id="audio1" src="../audio/success.wav"></audio>
+    <audio id="audio2" src="../audio/buzzer.mp3"></audio>
+    <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio>
 
     <div class="optButton" id="start">Round 2<br /> </div>
-
+    <a href="./level3.html">
     <div class="optButton" id="nextRound">Round 3<br /> <i class="far fa-play-circle"></i> </div>
-
+</a>
     <div class="optButton" id="restart">Play Again<br /> <i class="far fa-play-circle"></i> </div>
 
 
@@ -40,7 +40,7 @@
     <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
 
     <div class="level1">
-        <video source src="./djkVids/iGotKeysVid.mp4" id='video1'>
+        <video source src="../djkVids/iGotKeysVid.mp4" id='video1'>
         </video>
         <div id="game">
             <section class="grid">
