--- a/pages/level3.html
+++ b/pages/level3.html
@@ -19,13 +19,15 @@
     <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
     <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button>
 
-    <audio id="audio1" src="./audio/success.wav"></audio>
-    <audio id="audio2" src="./audio/buzzer.mp3"></audio>
-    <audio id="iGotKeys" src="./audio/IGotKeys3.mp3"></audio>
+    <audio id="audio1" src="../audio/success.wav"></audio>
+    <audio id="audio2" src="../audio/buzzer.mp3"></audio>
+    <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio>
 
     <div class="optButton" id="start">Round 3<br /> </div>
 
-    <div class="optButton" id="nextRound">Round 3<br /> <i class="far fa-play-circle"></i> </div>
+    <div class="optButton" id="nextRound">
+        
+        Round 3<br /> <i class="far fa-play-circle"></i> </div>
 
     <div class="optButton" id="restart">Play Again<br /> <i class="far fa-play-circle"></i> </div>
 
@@ -39,7 +41,7 @@
     <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
 
     <div class="level1">
-        <video source src="./djkVids/iGotKeysVid.mp4" id='video1'>
+        <video source src="../djkVids/iGotKeysVid.mp4" id='video1'>
         </video>
         <div id="game">
             <section class="grid">
