--- a/pages/level3.html
+++ b/pages/level3.html
@@ -41,7 +41,9 @@
     <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
 
     <div class="level1">
-        <video source src="../djkVids/iGotKeysVid.mp4" id='video1'>
+            <img id="confetti" src="../Gifs/confetti.gif" alt="confetti">
+
+        <video source src="../djkVids/AllIDoIsWin.mp4" id='video1'>
         </video>
         <div id="game">
             <section class="grid">
