--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
 
     <div class="level1">
-        <video source src="./djkVids/iGotKeysVid.mp4" id='video1'>
+        <video source src="./djkVids/theynoinspire.mov" id='video1'>
         </video>
         <div id="game">
             <section class="grid">
