--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <button onclick="enableMute()" id="mute" type="button">Buzzer Sound Off</button>
-    <button onclick="disableMute()" id="unmute" type="button">Buzzer Sound On</button>
-    <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
-    <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button>
+    <button onclick="enableMute()" id="mute" type="button">Buzzer/Bell Off</button>
+    <button onclick="disableMute()" id="unmute" type="button">Buzzer/Bell On</button>
+    <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
+    <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button> -->
     <a href="./pages/level2.html">Level2</a>
     <audio id="audio1" src="./audio/success.wav"></audio>
     <audio id="audio2" src="./audio/buzzer.mp3"></audio>
