playing with bkgd colors

--- a/pages/level2.html
+++ b/pages/level2.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body>
+<body class="bkgd">
         <button onclick="enableMute()" id="mute" type="button">Buzzer/Bell Off</button>
         <button onclick="disableMute()" id="unmute" type="button">Buzzer/Bell On</button>
         <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
