--- a/pages/level3.html
+++ b/pages/level3.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,12 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body>
-        <button onclick="enableMute()" id="mute" type="button">Buzzer/Bell Off</button>
-        <button onclick="disableMute()" id="unmute" type="button">Buzzer/Bell On</button>
-        <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
+<body class="bkgd">
+    <button onclick="enableMute()" id="mute" type="button">Buzzer/Bell Off</button>
+    <button onclick="disableMute()" id="unmute" type="button">Buzzer/Bell On</button>
+    <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
         <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button> -->
-        <a href="../index.html">Start Over</a>
+    <a href="../index.html">Start Over</a>
 
     <audio id="audio1" src="../audio/success.wav"></audio>
     <audio id="audio2" src="../audio/buzzer.mp3"></audio>
@@ -27,7 +26,7 @@
     <div class="optButton" id="start">Round 3<br /> </div>
 
     <div class="optButton" id="nextRound">
-        
+
         Round 3<br /> <i class="far fa-play-circle"></i> </div>
 
     <div class="optButton" id="restart">Play Level 3 Again<br /> <i class="far fa-play-circle"></i> </div>
@@ -42,7 +41,7 @@
     <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
 
     <div class="level1">
-            <img id="confetti" src="../Gifs/confetti.gif" alt="confetti">
+        <img id="confetti" src="../Gifs/confetti.gif" alt="confetti">
 
         <video source src="../djkVids/AllIDoIsWin.mp4" id='video1'>
         </video>
@@ -52,7 +51,7 @@
                     <!-- <div class="front"></div> -->
                     <div class="back"></div>
                 </div>
-                
+
 
 </body>
 
