--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body>
+<body class="bkgd">
     <button onclick="enableMute()" id="mute" type="button">Buzzer/Bell Off</button>
     <button onclick="disableMute()" id="unmute" type="button">Buzzer/Bell On</button>
     <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
@@ -23,7 +23,7 @@
     <audio id="audio2" src="./audio/buzzer.mp3"></audio>
     <audio id="iGotKeys" src="./audio/IGotKeys3.mp3"></audio>
 
-    <div class="optButton" id="start">Round 1<br /> </div>
+    <div class="optButton" id="start">Start<br /> </div>
 <a href="./pages/level2.html">
     <div class="optButton" id="nextRound">Round 2<br /> <i class="far fa-play-circle"></i> </div>
 </a>
