--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <button onclick="disableMute()" id="unmute" type="button">Buzzer/Bell On</button>
     <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
     <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button> -->
-    <a href="./pages/level2.html">Level2</a>
+    <a href="./pages/level2.html">Level2</a> 
     <audio id="audio1" src="./audio/success.wav"></audio>
     <audio id="audio2" src="./audio/buzzer.mp3"></audio>
     <audio id="iGotKeys" src="./audio/IGotKeys3.mp3"></audio>
 
-    <div class="optButton" id="start">Start<br /> </div>
+    <div class="optButton" id="start">Start<br /> ► </div>
 <a href="./pages/level2.html">
-    <div class="optButton" id="nextRound">Round 2<br /> <i class="far fa-play-circle"></i> </div>
+    <div class="optButton" id="nextRound">Round 2<br /> ► </div>
 </a>
-    <div class="optButton" id="restart">Play Again<br /> <i class="far fa-play-circle"></i> </div>
+    <div class="optButton" id="restart">Play Again<br /> ► </div>
 
 
     <div class="optButton" id="lifeCountID">Keys:
