--- a/pages/level2.html
+++ b/pages/level2.html
@@ -24,11 +24,11 @@
     <audio id="audio2" src="../audio/buzzer.mp3"></audio>
     <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio>
 
-    <div class="optButton" id="start">Round 2<br /> </div>
+    <div class="optButton" id="start">Round 2<br /> ► </div>
     <a href="./level3.html">
-    <div class="optButton" id="nextRound">Round 3<br /> <i class="far fa-play-circle"></i> </div>
+    <div class="optButton" id="nextRound">Round 3<br /> ► </div>
 </a>
-    <div class="optButton" id="restart">Play Again<br /> <i class="far fa-play-circle"></i> </div>
+    <div class="optButton" id="restart">Play Again<br /> ► </div>
 
 
     <div class="optButton" id="lifeCountID">Keys:
