--- a/pages/level3.html
+++ b/pages/level3.html
@@ -23,13 +23,9 @@
     <audio id="audio2" src="../audio/buzzer.mp3"></audio>
     <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio>
 
-    <div class="optButton" id="start">Round 3<br /> </div>
-
-    <div class="optButton" id="nextRound">
-
-        Round 3<br /> <i class="far fa-play-circle"></i> </div>
-
-    <div class="optButton" id="restart">Play Level 3 Again<br /> <i class="far fa-play-circle"></i> </div>
+    <div class="optButton" id="start">Round 3<br /> ► </div>
+    <!-- <div class="optButton" id="nextRound"> Round 4<br /> ► </div> -->
+    <div class="optButton" id="restart">Play Level 3 Again<br /> ► </div>
 
 
     <div class="optButton" id="lifeCountID">Keys:
