--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body class="bkgd">
-    <button onclick="enableMute()" id="mute" type="button">Buzzer/Bell Off</button>
-    <button onclick="disableMute()" id="unmute" type="button">Buzzer/Bell On</button>
+    <button onclick="enableMute()" id="mute" type="button">🔕</button>
+    <button onclick="disableMute()" id="unmute" type="button">🔔</button>
     <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
     <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button> -->
     <a href="./pages/level2.html">Level2</a> 
