--- a/pages/level2.html
+++ b/pages/level2.html
@@ -14,8 +14,8 @@
 </head>
 
 <body class="bkgd">
-        <button onclick="enableMute()" id="mute" type="button">Buzzer/Bell Off</button>
-        <button onclick="disableMute()" id="unmute" type="button">Buzzer/Bell On</button>
+        <button onclick="enableMute()" id="mute" type="button">🔕</button>
+        <button onclick="disableMute()" id="unmute" type="button">🔔</button>
         <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
         <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button> -->
     <a href="./level3.html">Level3</a>
