--- a/pages/level1.html
+++ b/pages/level1.html
@@ -8,24 +8,26 @@
 
     <title>DJ Khaled Memory Game</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="./level1.html">
+    <link rel="stylesheet" href="./level2.html">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="bkgd">
-        <button onclick="enableMute()" id="mute" type="button">🔕</button>
-        <button onclick="disableMute()" id="unmute" type="button">🔔</button>
+    <button onclick="enableMute()" id="mute" type="button">🔕</button>
+    <button onclick="disableMute()" id="unmute" type="button">🔔</button>
     <!-- <button onclick="khaledOff()" id="djkoff" type="button">DJ Khaled Off</button>
-        <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button> -->
-    <a href="./level1.html">Start Over</a>
-
+    <button onclick="khaledOn()" id="djkon" type="button">DJ Khaled On</button> -->
+    <a href="./level2.html">Level2</a> 
     <audio id="audio1" src="../audio/success.wav"></audio>
     <audio id="audio2" src="../audio/buzzer.mp3"></audio>
     <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio>
 
-    <div class="optButton" id="start">Round 3<br /> ► </div>
-    <!-- <div class="optButton" id="nextRound"> Round 4<br /> ► </div> -->
-    <div class="optButton" id="restart">Play Level 3 Again<br /> ► </div>
+    <div class="optButton" id="start">Start<br /> ► </div>
+<a href="./level2.html">
+    <div class="optButton" id="nextRound">Round 2<br /> ► </div>
+</a>
+    <div class="optButton" id="restart">Play Again<br /> ► </div>
 
 
     <div class="optButton" id="lifeCountID">Keys:
@@ -37,9 +39,7 @@
     <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
 
     <div class="level1">
-        <img id="confetti" src="../Gifs/confetti.gif" alt="confetti">
-
-        <video source src="../djkVids/AllIDoIsWin.mp4" id='video1'>
+        <video source src="../djkVids/broke.mov" id='video1'>
         </video>
         <div id="game">
             <section class="grid">
@@ -47,12 +47,23 @@
                     <!-- <div class="front"></div> -->
                     <div class="back"></div>
                 </div>
-
+                <div class="level2">
+                    <video source src="../djkVids/iGotKeysVid.mp4" id='video1'>
+                    </video>
+                    <div id="game">
+                        <section class="grid">
+                            <div class="card">
+                                <!-- <div class="front"></div> -->
+                                <div class="back"></div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
 
 </body>
 
 
-<script src="../js/level3.js"></script>
+<script src="../js/level1.js"></script>
 
 </body>
 
