--- a/pages/level2.html
+++ b/pages/level2.html
@@ -8,7 +8,7 @@
 
     <title>DJ Khaled Memory Game</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="/index.html">
+    <link rel="stylesheet" href="./level1.html">
     <link rel="stylesheet" href="./level3.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
