added to trivia, done for the night!

--- a/pages/trivia.html
+++ b/pages/trivia.html
@@ -3,9 +3,10 @@
 	<head>
 		<title>Dynamic Quiz Project</title>
 		<link type='text/css' rel='stylesheet' href='../css/trivia.css'/>
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open Sans"/>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open Sans"/>
+        <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 	</head>
-	<body>
+	<body id='triviaBody'>
 		<div id='container'>
 			<div id='title'>
                 <h1>Major Keys Trivia</h1>
