--- a/pages/trivia.html
+++ b/pages/trivia.html
@@ -9,7 +9,7 @@
 	<body id='triviaBody'>
 		<div id='container'>
 			<div id='title'>
-                <h1>Major Keys Trivia</h1>
+                <!-- <h1>Major Keys Trivia</h1> -->
 			</div>
    			<br/>
   			<div id='quiz'></div>
