--- a/pages/level1.html
+++ b/pages/level1.html
@@ -48,7 +48,7 @@
                     <div class="back"></div>
                 </div>
                 <div class="level2">
-                    <video source src="../djkVids/iGotKeysVid.mp4" id='video1'>
+                    <!-- <video source src="../djkVids/iGotKeysVid.mp4" id='video1'> -->
                     </video>
                     <div id="game">
                         <section class="grid">
