--- a/pages/level2.html
+++ b/pages/level2.html
@@ -40,8 +40,8 @@
     <img id="logo" src="/img/MAJOR-KEYS2.png" alt="logo">
 
     <div class="level1">
-        <video source src="../djkVids/theynoinspire.mov" id='video1'>
-        </video>
+        <!-- <video source src="../djkVids/theynoinspire.mov" id='video1'>
+        </video> -->
         <div id="game">
             <section class="grid">
                 <div class="card">
