--- a/pages/level3.html
+++ b/pages/level3.html
@@ -21,7 +21,7 @@
 
     <audio id="audio1" src="../audio/success.wav"></audio>
     <audio id="audio2" src="../audio/buzzer.mp3"></audio>
-    <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio>
+    <!-- <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio> -->
 
     <div class="optButton" id="start">Round 3<br /> ► </div>
     <!-- <div class="optButton" id="nextRound"> Round 4<br /> ► </div> -->
