--- a/pages/level1.html
+++ b/pages/level1.html
@@ -21,9 +21,9 @@
     <a href="./level2.html">Level2</a> 
     <audio id="audio1" src="../audio/success.wav"></audio>
     <audio id="audio2" src="../audio/buzzer.mp3"></audio>
-    <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio>
+    <audio id="iGotKeys" src="../audio/majorKeyAlert2.mp3"></audio>
 
-    <div class="optButton" id="start">Start<br /> ► </div>
+    <div class="optButton" id="start">Play<br /> ► </div>
 <a href="./level2.html">
     <div class="optButton" id="nextRound">Round 2<br /> ► </div>
 </a>
