--- a/pages/level2.html
+++ b/pages/level2.html
@@ -22,9 +22,9 @@
 
     <audio id="audio1" src="../audio/success.wav"></audio>
     <audio id="audio2" src="../audio/buzzer.mp3"></audio>
-    <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio>
+    <audio id="iGotKeys" src="../audio/majorKeyAlert2.mp3"></audio>
 
-    <div class="optButton" id="start">Round 2<br /> ► </div>
+    <div class="optButton" id="start">Play Rd 2<br /> ► </div>
     <a href="./level3.html">
     <div class="optButton" id="nextRound">Round 3<br /> ► </div>
 </a>
