--- a/pages/level3.html
+++ b/pages/level3.html
@@ -21,11 +21,11 @@
 
     <audio id="audio1" src="../audio/success.wav"></audio>
     <audio id="audio2" src="../audio/buzzer.mp3"></audio>
-    <!-- <audio id="iGotKeys" src="../audio/IGotKeys3.mp3"></audio> -->
+    <audio id="iGotKeys" src="../audio/majorKeyAlert2.mp3"></audio>
 
-    <div class="optButton" id="start">Round 3<br /> ► </div>
+    <div class="optButton" id="start">Play Rd 3<br /> ► </div>
     <!-- <div class="optButton" id="nextRound"> Round 4<br /> ► </div> -->
-    <div class="optButton" id="restart">Play Level 3 Again<br /> ► </div>
+    <div class="optButton" id="restart">Play Rd 3 Again<br /> ► </div>
 
 
     <div class="optButton" id="lifeCountID">Keys:
